--- a/.github/workflows/run_sc_lab01.yml
+++ b/.github/workflows/run_sc_lab01.yml
@@ -8,11 +8,15 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Check out
+        uses: actions/checkout@v4
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-      - run: |
+      - name: Installe dependencies
+        run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - run: python sc_lab01_hl.py
+      - name: Run code
+        run: python sc_lab01_hl.py
